Fixed main menu overflow.

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,6 @@ body:not(.home-page) #menu-wrapper {
 
 #menu-wrapper {
   padding-bottom: 2em;
-  overflow: auto;
   top: 0;
   left: 0;
   right: 0;
