--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -177,7 +177,7 @@ body:not( .home-page ){
 
 #menu-wrapper{
   padding-bottom: 2em;
-  overflow: auto;
+  // overflow: auto;
   top: 0;
   left: 0;
   right: 0;
